fix overflow iphone 4.0

--- a/style.css
+++ b/style.css
@@ -7,15 +7,14 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
     display: none;
-    overflow-x: hidden;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 body {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-    overflow-x: hidden;
     position: relative;
+    overflow-x: hidden;
     height: 100%;
 }
 
@@ -26,6 +25,7 @@ header {
     height: 100vh;
     width: 100%;
     font-family: "Montserrat", sans-serif;
+    position: relative;
     overflow-x: hidden;
 }
 
@@ -535,8 +535,8 @@ footer {
 @media screen and (max-width: 790px) {
 
     body {
-        overflow-x: hidden;
         position: relative;
+        overflow-x: hidden;
         height: 100%;
     }
 
